# cpython-3.8.16

./: a.out  aes.c  ctest.py  de_ptyce.py  print_aes.py  pyc2pye.py  test2.py  test_aes.c  view_pyc.py
Include/: marshal.h
Lib/importlib/: _bootstrap_external.py
Python/: aes.c  aes.h  compile.c  import.c  importlib_external.h  marshal.c  pythonrun.c
aes/: CMakeLists.txt  aes.cpp  readmd.md
aes/pybind11-2.11.1/: CMakeLists.txt
pyce/: test1 copy.py  test1.py  test2.py
pyce2/: test1.pyce  test2.pyce
